--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
         <p>Santino Cataldo</p>
         <p>Bruno Olivera</p>
         <p>Matias Fanti</p>
+        <p>Joaquin Palacios</p>
     </footer>
 </body>
 </html>
